[package]
name = "twilight-assembly"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/DanielOliver/twilight-assembly"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = {version = "0.2.80",  features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
ts-rs = "6.1"
